--- a/DoAn2/app/src/main/res/layout/activy_main_signup.xml
+++ b/DoAn2/app/src/main/res/layout/activy_main_signup.xml
@@ -26,8 +26,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-
         >
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
