--- a/DoAn2/app/src/main/res/layout/activy_main_signup.xml
+++ b/DoAn2/app/src/main/res/layout/activy_main_signup.xml
@@ -29,9 +29,15 @@
         >
 
         <Button
+            android:id="@+id/elevatedButton"
+            style="@style/Widget.Material3.Button.ElevatedButton"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_height="wrap_content"
+            android:text="Sign Up"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="50dp"></Button>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
