--- a/DoAn2/app/src/main/res/layout/activity_forget.xml
+++ b/DoAn2/app/src/main/res/layout/activity_forget.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/black">
+    android:background="@drawable/background"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,7 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/tb_toolbar"
-            android:background="@color/cyan"
             app:titleTextColor="@color/black">
 
         </androidx.appcompat.widget.Toolbar>
@@ -25,19 +25,102 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@drawable/background"
         >
 
+        <ImageView
+            android:id="@+id/imlogo"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:src="@drawable/logoapp_removebg_preview"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="40dp"/>
+
         <Button
-            android:id="@+id/elevatedButton"
-            style="@style/Widget.Material3.Button.ElevatedButton"
+            style="@style/Widget.Material3.Button.TonalButton"
+            android:id="@+id/filledTonalButtonSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign Up"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:backgroundTint="@color/bluelight"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="50dp"></Button>
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldVerifyPassword"
+            />
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextFieldUserName"
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="Username">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="370dp"
+                android:layout_height="wrap_content"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextFieldPassword"
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/spinner_SecurityQuestion"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:passwordToggleEnabled="true"
+            android:hint="Enter your new password">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="370dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextFieldVerifyPassword"
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldPassword"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:passwordToggleEnabled="true"
+            android:hint="Verify your new password">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="370dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Spinner
+            android:layout_width="370dp"
+            android:layout_height="40dp"
+            android:id="@+id/spinner_SecurityQuestion"
+            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldUserName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:passwordToggleEnabled="true"
+            android:autofillHints="Enter your verify question"
+            android:background="@color/yellow"/>
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
