--- a/DoAn2/app/src/main/res/layout/activy_main_signup.xml
+++ b/DoAn2/app/src/main/res/layout/activy_main_signup.xml
@@ -51,7 +51,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldVerifyPassword"
+            app:layout_constraintTop_toBottomOf="@id/spinner_SecurityQuestion"
             />
 
 
@@ -107,6 +107,19 @@
                 android:inputType="textPassword"
                 />
         </com.google.android.material.textfield.TextInputLayout>
+
+        <Spinner
+            android:layout_width="370dp"
+            android:layout_height="40dp"
+            android:id="@+id/spinner_SecurityQuestion"
+            app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldVerifyPassword"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:passwordToggleEnabled="true"
+            android:autofillHints="Enter your verify question"
+            android:background="@color/yellow"/>
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
