--- a/DoAn2/app/src/main/res/layout/activy_main_signup.xml
+++ b/DoAn2/app/src/main/res/layout/activy_main_signup.xml
@@ -32,8 +32,7 @@
             android:src="@drawable/logoapp_removebg_preview"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="40dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             style="@style/Widget.Material3.Button.TonalButton"
