--- a/DoAn2/app/src/main/res/values/themes.xml
+++ b/DoAn2/app/src/main/res/values/themes.xml
@@ -4,7 +4,9 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/black</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
+
 
     <style name="Theme.DoAn" parent="Base.Theme.DoAn" />
 </resources>
