--- a/DoAn2/app/src/main/res/layout/fragment_home.xml
+++ b/DoAn2/app/src/main/res/layout/fragment_home.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home">
+    tools:context=".Fragment.Home">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Tốn liền"
+        android:layout_gravity="center"
+        android:textSize="50dp"/>
 
 </FrameLayout>
