--- a/DoAn2/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/DoAn2/app/src/main/res/layout/header_navigation_drawer.xml
@@ -1,43 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
     android:orientation="horizontal"
-    android:background="@drawable/background"
-    android:fitsSystemWindows="true">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="20dp"
+    android:background="@color/yellow"
+    android:id="@+id/toolbar"
+    android:gravity="center_vertical">
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/menu"/>
 
-    <LinearLayout
-        android:layout_width="350dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:textAppearance="?attr/textAppearanceHeadlineSmall"
-            android:textColor="?attr/colorOnSurface"
-            android:text="Ton Lien ON THE MIC" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:textAppearance="?attr/textAppearanceTitleSmall"
-            android:textColor="?attr/colorOnSurfaceVariant"
-            android:text="Mê anh Tiến nhất trên đời" />
-    </LinearLayout>
-    <ImageButton
-        android:id="@+id/imbexit"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/exit"
-        android:layout_marginStart="9dp">
-    </ImageButton>
-
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Main Menu"
+        android:layout_marginStart="20dp"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="contact@androidknowledge.com"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:layout_marginBottom="16dp"/>
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
