--- a/DoAn2/app/src/main/res/values/colors.xml
+++ b/DoAn2/app/src/main/res/values/colors.xml
@@ -6,4 +6,10 @@
     <color name="blue">#0085FF</color>
     <color name="yellow">#FAFF25</color>
     <color name="bluelight">#789FFC</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="lavender">#8692f7</color>
 </resources>
