--- a/DoAn2/app/src/main/res/layout/fragment_setting.xml
+++ b/DoAn2/app/src/main/res/layout/fragment_setting.xml
@@ -9,7 +9,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Thôn liền"
-        android:textSize="50dp"/>
+        android:text="Setting"
+        android:gravity="center"
+        android:textSize="40dp"/>
 
 </FrameLayout>
