--- a/DoAn2/app/src/main/res/layout/fragment_share.xml
+++ b/DoAn2/app/src/main/res/layout/fragment_share.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.Home">
+    tools:context=".Fragment.Share">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Home"
+        android:text="Share"
         android:gravity="center"
         android:textSize="40dp"/>
 
