--- a/DoAn2/app/src/main/res/layout/fragment_test.xml
+++ b/DoAn2/app/src/main/res/layout/fragment_test.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Thien">
+    tools:context=".Fragment.Test">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Test"
+        android:gravity="center"
+        android:textSize="40dp"/>
 
 </FrameLayout>
