--- a/DoAn2/app/src/main/res/values/colors.xml
+++ b/DoAn2/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="lavender">#8692f7</color>
+    <color name="gray">#808080</color>
 </resources>
