--- a/DoAn2/app/src/main/res/menu/navigation_drawer.xml
+++ b/DoAn2/app/src/main/res/menu/navigation_drawer.xml
@@ -10,15 +10,15 @@
             android:title="Home"/>
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/test"
+            android:icon="@drawable/baseline_settings_24"
             android:title="Settings"/>
         <item
             android:id="@+id/nav_share"
-            android:icon="@drawable/grammar"
+            android:icon="@drawable/baseline_share_24"
             android:title="Share"/>
         <item
             android:id="@+id/nav_about"
-            android:icon="@drawable/vocabulary"
+            android:icon="@drawable/baseline_aboutus_24"
             android:title="About Us"/>
     </group>
     <item
