--- a/DoAn2/app/src/main/res/drawable/drawer_border.xml
+++ b/DoAn2/app/src/main/res/drawable/drawer_border.xml
@@ -4,5 +4,5 @@
 
     <stroke
         android:width="2dp"
-        android:color="@color/yellow"/>
+        android:color="@color/cardview_light_background"/>
 </shape>
