--- a/DoAn2/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/DoAn2/app/src/main/res/layout/header_navigation_drawer.xml
@@ -4,19 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="90dp"
     android:padding="20dp"
+    android:layout_marginTop="20dp"
     android:background="@color/yellow"
     android:id="@+id/toolbar"
     android:gravity="center_vertical">
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/logoapp_removebg_preview"/>
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/logoapp"
+        android:scaleType="fitCenter"/>
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Main Menu"
+        android:text="EASY ENGLISH"
         android:layout_marginStart="20dp"
         android:textSize="20dp"
         android:textColor="@color/black"
