--- a/DoAn2/app/src/main/res/layout/activity_main_menu.xml
+++ b/DoAn2/app/src/main/res/layout/activity_main_menu.xml
@@ -31,8 +31,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/yellow"
             android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:theme="@style/ThemeOverlay.AppCompat.Light"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:title="Main Menu"
             app:titleTextColor="@color/black" >
             
