--- a/DoAn2/app/src/main/res/values/colors.xml
+++ b/DoAn2/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="lavender">#8692f7</color>
     <color name="gray">#808080</color>
+    <color name="dark_kaki">#BDB76B</color>
 </resources>
