--- a/DoAn2/app/src/main/res/layout/activity_account.xml
+++ b/DoAn2/app/src/main/res/layout/activity_account.xml
@@ -88,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Số điện thoại:"
+                    android:text="Phone Number:"
                     android:paddingStart="20dp"
                     android:textSize="18dp"
                     android:textStyle="bold"/>
@@ -126,7 +126,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Địa chỉ"
+                    android:text="Address"
                     android:paddingStart="20dp"
                     android:textSize="18dp"
                     android:textStyle="bold"/>
@@ -136,7 +136,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="số xx, đường xxx"
+                    android:text="Number xx, street xxx"
                     android:paddingEnd="20dp"
                     android:textSize="18dp"
                     android:gravity="end"/>
@@ -164,7 +164,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Mật khẩu"
+                    android:text="Password"
                     android:paddingStart="20dp"
                     android:textSize="18dp"
                     android:textStyle="bold"/>
@@ -202,7 +202,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Hạng"
+                    android:text="Rank"
                     android:paddingStart="20dp"
                     android:textSize="18dp"
                     android:textStyle="bold"/>
@@ -242,7 +242,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="Huy hiệu"
+                    android:text="Badge"
                     android:paddingStart="20dp"
                     android:textSize="18dp"
                     android:textStyle="bold"/>
