--- a/DoAn2/app/src/main/res/layout/fragment_setting.xml
+++ b/DoAn2/app/src/main/res/layout/fragment_setting.xml
@@ -23,14 +23,14 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:checked="true"
-            android:text="Thông báo"
+            android:text="Notification"
             android:textStyle="bold"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Âm lượng thông báo"
+            android:text="Notification volume"
             android:textSize="15dp"
             android:textStyle="bold"
             android:layout_marginStart="30dp"
@@ -61,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:checked="true"
-            android:text="Giao diện tối"
+            android:text="Dark Mode"
             android:textStyle="bold"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="20dp"/>
