--- a/DoAn2/app/src/main/res/layout/activity_test.xml
+++ b/DoAn2/app/src/main/res/layout/activity_test.xml
@@ -6,11 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".MainMenuFolder.Test">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Test"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="208dp" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card1"
+            android:layout_width="330dp"
+            android:layout_height="330dp"
+            app:cardCornerRadius="40dp"
+            app:cardElevation="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="60dp">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/grammarcheck"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card2"
+            android:layout_width="330dp"
+            android:layout_height="330dp"
+            app:cardCornerRadius="40dp"
+            app:cardElevation="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="60dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/vocabularycheck"/>
+
+        </androidx.cardview.widget.CardView>
+
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/imgbtn_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:background="@drawable/back_black_2"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
