--- a/DoAn2/app/src/main/res/values/themes.xml
+++ b/DoAn2/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.DoAn" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/dark_kaki</item>
         <item name="colorOnPrimary">@color/white</item>
