--- a/DoAn2/app/src/main/res/layout/activity_vocabulary.xml
+++ b/DoAn2/app/src/main/res/layout/activity_vocabulary.xml
@@ -26,4 +26,20 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:background="@drawable/back_black_2"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card1"
+        android:layout_width="384dp"
+        android:layout_height="92dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="55dp">
+        <ImageButton
+            android:id="@+id/ibt1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/vocabularyui1"/>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
