--- a/DoAn2/app/src/main/res/layout/activity_grammar_tu1.xml
+++ b/DoAn2/app/src/main/res/layout/activity_grammar_tu1.xml
@@ -27,4 +27,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="30dp"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:layout_width="412dp"
+            android:layout_height="0dp"
+            android:background="@drawable/grammartu1"
+            android:layout_marginTop="20dp" />
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
