--- a/DoAn2/app/src/main/res/layout/activity_voc1.xml
+++ b/DoAn2/app/src/main/res/layout/activity_voc1.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Vocabulary.Voc1">
 
+
     <ImageButton
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -27,4 +28,127 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="30dp"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card1"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView2"
+        android:layout_marginTop="50dp"
+        app:cardElevation="40dp"
+        app:cardCornerRadius="30dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/textViewVoc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="abide by"
+                android:textSize="50dp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="50dp"/>
+            <TextView
+                android:id="@+id/textViewPhienAm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="/əˈbaɪd/"
+                android:textSize="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textViewVoc"
+                app:layout_constraintBottom_toTopOf="@id/textViewNghia" />
+            <TextView
+                android:id="@+id/textViewNghia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="(v) tuân theo"
+                android:textSize="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="50dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/textViewVD"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/card1"
+        android:layout_marginTop="70dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Ví dụ:"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:paddingStart="20dp"/>
+    <TextView
+        android:id="@+id/textViewVDE"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/textViewVD"
+        app:layout_constraintStart_toStartOf="@id/textViewVD"
+        android:layout_marginTop="20dp"
+        android:text="The two parties agrees to abide by the judge's decision"
+        android:textSize="20dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/textViewVDV"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/textViewVDE"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@id/textViewVDE"
+        android:text="Hai bên đã đồng ý tuân theo quyết định của tòa án"
+        android:textSize="20dp"
+        android:textColor="@color/dark_golden_rod"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/textViewNumTu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="1/12"
+        android:textSize="30dp"
+        android:textStyle="bold"/>
+    <Button
+        android:id="@+id/btnBackQues"
+        style="@style/Widget.Material3.Button.ElevatedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        app:icon="@drawable/back"
+        app:layout_constraintBottom_toBottomOf="@id/textViewNumTu"
+        app:layout_constraintTop_toTopOf="@id/textViewNumTu"
+        android:layout_marginStart="20dp"
+        android:enabled="false"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnNextQues"
+        style="@style/Widget.Material3.Button.ElevatedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        app:icon="@drawable/next"
+        app:iconGravity="end"
+        app:layout_constraintBottom_toBottomOf="@id/textViewNumTu"
+        app:layout_constraintTop_toTopOf="@id/textViewNumTu"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="20dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
